--- a/app/css/style.css
+++ b/app/css/style.css
@@ -54,9 +54,10 @@ td {
   text-shadow: none;
   width: 60%;
   margin: auto;
-  color: rgb(251, 253, 150);
-  text-shadow: 1px 1px rgb(36, 13, 0);
-  font-size: 1.05rem;
+  color: rgb(252, 227, 146);
+  text-shadow: 2px 2px 1px rgb(36, 13, 0);
+  font-size: 1.3rem;
+  font-weight: 900;
 }
 .page-logo {
   width: 100px;
@@ -141,7 +142,6 @@ td {
     rgba(239, 240, 185, 1) 45%,
     rgb(56, 49, 26) 100%
   );
-  transform: scale(1.1);
   color: rgb(36, 13, 0);
 }
 .play-btn {
@@ -167,5 +167,8 @@ td {
     content: '';
     width: 17rem;
     height: 19rem;
+  }
+  .game-over {
+    font-size: 1.8rem;
   }
 }
